--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 raylib = "5.5.1"
 raylib-sys = "5.5.1"
+serde = {version = "1.0.228", features = ["derive"]}
+serde_json = "1.0.145"
