--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+pyo3 = "0.27.1"
 raylib = "5.5.1"
 raylib-sys = "5.5.1"
 serde = {version = "1.0.228", features = ["derive"]}
